# jamie

./: .gitignore  Dockerfile  README.md  env.example  example_usage.py  pyproject.toml  run_jamie_tests.py  run_tests.sh  setup-firebase.sh
deployment/: README.md  agent-service-template.yaml  agent.Dockerfile  deploy.sh  frontend.Dockerfile  orchestrator.Dockerfile
frontend/: README.md  env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Chat.css  Chat.js  SignIn.css  SignIn.js
src/: config.py  main.py
src/agent/: clients.py  db.py  graph.py  llm_client.py  schemas.py
src/agent/tools/: order.py  recipes.py  restaurants.py
src/agent_service/: __init__.py  main.py  sessions.py  storage.py
src/data/: recipes.json  restaurants.json
src/orchestrator/: __init__.py  main.py
src/scripts/: migrate_db.py  test_recipe_tool.py
src/web/: api.py  sessions.py  storage.py
tests/: conftest.py  test_agent.py  test_api.py  test_jamie.py  test_queries.txt  test_sessions.py  test_tools.py
